feat: bug fix and env

--- a/TraveloHI - frontend/package.json
+++ b/TraveloHI - frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@cloudinary/url-gen": "^1.16.1",
     "cloudinary": "^2.0.0",
+    "dotenv": "^16.4.5",
     "font-awesome": "^4.7.0",
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^22.7.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-google-recaptcha": "^2.1.8",
